fix header alignment for 320wide

--- a/Source/Waterproofing/assets/stylesheets/Site.css
+++ b/Source/Waterproofing/assets/stylesheets/Site.css
@@ -67,7 +67,6 @@ p {
 }
 #header .navbar-default {    
     border-bottom: 2px solid #fff;
-    margin: 0 7px;
 }
 .affix {
     position: fixed; 
@@ -77,7 +76,6 @@ p {
     z-index: 10000;
     position: absolute;
     top: -16px;
-    right: 45px;
     background-color: #e8e8e8;
     padding: 5px 10px;
 }
@@ -277,7 +275,7 @@ height: 100%;
     right: 45px;
     }
     #header .navbar-default .navbar-nav > li > a span {
-        max-width: 120px;
+        max-width: 105px;
     }
 }
 @media (min-width: 992px) {
